--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -120,6 +120,10 @@ body {
     cursor: pointer;
 }
 
+.disabled-btn {
+    pointer-events: none;
+    opacity: 0.5;
+}
 //[End] Buttons
 
 //[Start] Others
