--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
         <app-new-post></app-new-post>
 
         <div class="post-card-item" *ngFor="let post of latestPosts">
-            <div class="image-and-details-wrapper">
+            <div class="image-and-details-wrapper space">
                 <div class="image-and-details">
                     <div class="profile-img-wrapper">
                         <img class="profile-img" [src]="post.userImageURL" alt="Profile Image">
@@ -22,7 +22,7 @@
                     <mat-menu #menu="matMenu">
                         <button mat-menu-item (click)="onDeletePost(post.id)">
                             <mat-icon class="delete-icon">delete</mat-icon>
-                            <span>Delete</span>
+                            <span>Delete post</span>
                         </button>
                     </mat-menu>
                 </div>
@@ -37,20 +37,21 @@
                             <div class="number-of-likes">
                                 {{post.numberOfLikes === 0 ? '' : post.numberOfLikes}}
                             </div>
-                            <mat-icon class="like-btn" (click)="onReactionClick(post.id, 'likes')">thumb_up</mat-icon>
+                            <mat-icon class="like-btn" (click)="onReactionClick(post.id, 'like')">thumb_up</mat-icon>
                         </div>
                         <div class="dislikes-section">
                             <div class="number-of-dislikes">
                                 {{post.numberOfDislikes === 0 ? '' : post.numberOfDislikes}}
                             </div>
-                            <mat-icon class="dislike-btn" (click)="onReactionClick(post.id, 'dislikes')">thumb_down
+                            <mat-icon class="dislike-btn" (click)="onReactionClick(post.id, 'dislike')">thumb_down
                             </mat-icon>
                         </div>
                     </div>
-                    <div class="comments-btn" (click)="showHideComments(post)">
+                    <button class="comments-btn" (click)="showHideComments(post)">
                         <mat-icon>comment</mat-icon>
                         Comments
-                    </div>
+<!--                        {{post.numberOfComments}} Comments-->
+                    </button>
                 </div>
             </div>
             <div *ngIf="post.areCommentsVisible" class="post-comments">
@@ -72,7 +73,9 @@
                                       rows="3"
                                       formControlName="newComment">
                             </textarea>
-                            <button class="btn-primary new-comment-btn" (click)="onSubmitComment(post.id)">Reply
+                            <button
+                                [ngClass]="{'disabled-btn' : !newCommentForm.get('newComment')?.value?.trim().length}"
+                                class="btn-primary new-comment-btn" (click)="onSubmitComment(post.id)">Reply
                             </button>
                         </mat-form-field>
                     </form>
