--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -24,6 +24,9 @@
             &-wrapper {
                 display: flex;
                 margin-bottom: 1rem;
+            }
+
+            &-wrapper.space {
                 justify-content: space-between;
             }
         }
@@ -88,6 +91,7 @@
                         padding: 10px 12px;
                         background-color: globalVars.$gray-1;
                         border-radius: 4px;
+                        border: none;
 
                         .mat-icon {
                             margin-right: 0.5rem;
