add teacher badge

--- a/src/app/components/auth-dialog/auth-dialog.component.html
+++ b/src/app/components/auth-dialog/auth-dialog.component.html
@@ -46,6 +46,7 @@
                 <input matInput formControlName="accessCode" type="text" class="access-code"
                        autocomplete="one-time-code">
             </mat-form-field>
+            <mat-checkbox formControlName="isTeacher">Is this user a teacher?</mat-checkbox>
         </div>
     </form>
 
