--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -30,11 +30,11 @@
                     </mat-option>
                 </mat-autocomplete>
             </mat-form-field>
-            <mat-form-field appearance="outline">
-                <mat-label>Access code</mat-label>
-                <input matInput formControlName="accessCode" type="text" class="access-code"
-                       autocomplete="one-time-code">
-            </mat-form-field>
+<!--            <mat-form-field appearance="outline">-->
+<!--                <mat-label>Access code</mat-label>-->
+<!--                <input matInput formControlName="accessCode" type="text" class="access-code"-->
+<!--                       autocomplete="one-time-code">-->
+<!--            </mat-form-field>-->
         </form>
     </div>
     <div class="profile-right">
