--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,7 +9,9 @@
                         <img class="profile-img" [src]="post.userImageURL" alt="Profile Image">
                     </div>
                     <div class="post-details">
-                        <div class="post-author">{{post.userFirstName}} {{post.userLastName}}</div>
+                        <div class="post-author">{{post.userFirstName}} {{post.userLastName}}
+                            <div class="teacher-badge" *ngIf="post.userIsTeacher">Professor</div>
+                        </div>
                         <div class="post-datetime">
                             {{post.created?.toDate() | date: 'dd MMM y, H:mm'}}
                         </div>
@@ -50,7 +52,7 @@
                     <button class="comments-btn" (click)="showHideComments(post)">
                         <mat-icon>comment</mat-icon>
                         Comments
-<!--                        {{post.numberOfComments}} Comments-->
+                        <!--                        {{post.numberOfComments}} Comments-->
                     </button>
                 </div>
             </div>
