--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -151,4 +151,16 @@ body {
     pointer-events: none;
 }
 
+.hidden {
+    display: none !important;
+}
+
+.reset-img-icon {
+    cursor: pointer;
+    position: absolute;
+    right: 3px;
+    top: 0;
+    color: globalVars.$color-invalid;
+}
+
 //[End] Others
