--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,12 +17,16 @@
                         </div>
                     </div>
                 </div>
-                <div class="post-menu" *ngIf="post.uid === currentUid">
+                <div class="post-menu">
                     <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Menu">
                         <mat-icon>more_vert</mat-icon>
                     </button>
                     <mat-menu #menu="matMenu">
-                        <button mat-menu-item (click)="onDeletePost(post.id)">
+                        <button mat-menu-item (click)="onSavePost(post.id)">
+                            <mat-icon class="save-icon">bookmark</mat-icon>
+                            <span>Save post</span>
+                        </button>
+                        <button *ngIf="post.uid === currentUid" mat-menu-item (click)="onDeletePost(post.id)">
                             <mat-icon class="delete-icon">delete</mat-icon>
                             <span>Delete post</span>
                         </button>
