--- a/src/app/shared/components/snackbar/snackbar.component.scss
+++ b/src/app/shared/components/snackbar/snackbar.component.scss
@@ -1,5 +1,7 @@
+@use "src/assets/styles/globalVars";
+
 .snackbar {
     &-text {
-        color: white;
+        color: globalVars.$white;
     }
 }
