--- a/src/app/components/landing-page/landing-page.component.scss
+++ b/src/app/components/landing-page/landing-page.component.scss
@@ -35,7 +35,7 @@
             background: globalVars.$primary-color;
             //border: 1px solid rgba(0, 0, 0, 0);
             border-radius: 35px;
-            color: white;
+            color: globalVars.$white;
             font-weight: bold;
             min-height: 48px;
             font-size: 15px;
