--- a/src/app/components/new-post/new-post.component.scss
+++ b/src/app/components/new-post/new-post.component.scss
@@ -2,7 +2,7 @@
 
 .new-post {
     width: 650px;
-    background: white;
+    background: globalVars.$white;
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.15);
     padding: 20px 25px;
     border-radius: 30px;
