--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,8 @@
 <div class="home">
     <div class="left">
         <app-new-post></app-new-post>
+
+<!--        testing Algolia here...-->
         <ais-instantsearch [config]="searchConfig">
             <ais-search-box (change)="searchChanged($event)"></ais-search-box>
             <ais-hits *ngIf="showResults">
@@ -11,6 +13,8 @@
                 </ng-template>
             </ais-hits>
         </ais-instantsearch>
+
+
         <div class="post-card-item" *ngFor="let post of latestPosts">
             <div class="image-and-details-wrapper space">
                 <div class="image-and-details" (click)="goToUerProfile(post.uid)">
