--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="home">
-    <div class="left">
+<!--    <div class="left">-->
         <app-new-post></app-new-post>
 
         <div class="post-card-item" *ngFor="let post of latestPosts">
@@ -108,9 +108,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+<!--        </div>-->
     </div>
-    <div class="right">
-        searchbar here
-    </div>
+<!--    <div class="right">-->
+<!--        searchbar here-->
+<!--    </div>-->
 </div>
