--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,6 +1,6 @@
 .home {
     height: 100vh;
-    padding: 30px;
-    display: grid;
-    grid-template-columns: 1fr 0.4fr;
+    padding: 60px;
+    //display: grid;
+    //grid-template-columns: 1fr 0.4fr;
 }
