--- a/src/app/components/main-nav/main-nav.component.html
+++ b/src/app/components/main-nav/main-nav.component.html
@@ -34,4 +34,5 @@
         <span>licenta</span>
     </mat-toolbar>
     <router-outlet></router-outlet>
+    <app-search *ngIf="authService.currentUid != undefined"></app-search>
 </mat-sidenav-container>
